src/test/ui/feature-gates/feature-gate-doc_keyword.rs
#[doc(keyword = "match")] //~ ERROR: #[doc(keyword = "...")] is experimental
/// wonderful
mod foo{}

fn main() {}
